--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -90,7 +90,59 @@ sound_player:
   villagermultiball_ready:
     villager_multiball_ready
 
+light_player:
+  spinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
+    l_spinner1: green
+    l_spinner2: off
+    l_spinner3: off
+    l_spinner4: off
+  spinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 1000
+    l_spinner1: off
+    l_spinner2: green
+    l_spinner3: off
+    l_spinner4: off
+  spinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 1000
+    l_spinner1: off
+    l_spinner2: off
+    l_spinner3: green
+    l_spinner4: off
+  spinner_hit{device.counters.counter_villagermultiball.value>=16}:
+    l_spinner3: off 
+    l_spinner2: off 
+    l_spinner1: off
+    l_spinner4: green 
+  multiball_villagermb_started:
+    l_spinner1: green
+    l_spinner2: green
+    l_spinner3: green
+    l_spinner4: green
+  multiball_villagermb_ended:
+    l_spinner1: off
+    l_spinner2: off
+    l_spinner3: off
+    l_spinner4: off
+
 variable_player:
+
+  #SPINNER SCORING
+  spinner_hit{device.counters.counter_villagermultiball.value<4}: #LEVEL 100
+    score: 100 * current_player.multiplier_mb
+    world_jackpot_base: 1000
+  spinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
+    score: 1000 * current_player.multiplier_mb
+    world_jackpot_base: 1000
+  spinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 2000
+    score: 2000 * current_player.multiplier_mb
+    world_jackpot_base: 1000
+  spinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 3000
+    score: 3000 * current_player.multiplier_mb
+    world_jackpot_base: 1000
+  spinner_hit{device.counters.counter_villagermultiball.value>=16}: #LEVEL 4000
+    score: 4000 * current_player.multiplier_mb
+    world_jackpot_base: 1000
+
+
+
   multiball_villagermb_started: #VILLAGER MULTIBALL STARTED
     multiplier_mb:
       int: 2
@@ -337,8 +389,14 @@ event_player:
     collectitem4_disabled
 
 
+  #ENABLE VILLAGER MULTIBALL 
+  logicblock_counter_villagermultiball_complete{current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0}:
+    villagermultiball_ready
+
   #START VILLAGER MULTIBALL ON PLUNGE
   sw_playfield_active_active{device.multiball_locks.villagerlock.locked_balls==1 and device.multiball_locks.villagerlock.enabled}:
     villagermultiball_start
+
+
 
  
