--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,6 +1,6 @@
 events:
   game_ended: 223
-  game_started: 955
+  game_started: 961
 player:
   score:
     average: 9325214.197530864
@@ -17,23 +17,23 @@ player:
     - 34361450
     total: 243
 shots:
-  award_extraball: 88
-  captiveball: 844
+  award_extraball: 89
+  captiveball: 849
   centertarget: 1541
-  collectitem1: 4362
-  collectitem2: 4294
-  collectitem3: 3130
-  collectitem4: 4079
+  collectitem1: 4403
+  collectitem2: 4336
+  collectitem3: 3169
+  collectitem4: 4120
   collectitem5: 1881
-  collectitem_special: 1783
-  craft1: 553
-  craft2: 595
-  craft3: 575
-  craft4: 579
+  collectitem_special: 1803
+  craft1: 555
+  craft2: 601
+  craft3: 576
+  craft4: 583
   eyespinner: 565
-  leftslingshot: 5619
-  loopleft: 4324
-  loopright: 3392
+  leftslingshot: 5623
+  loopleft: 4331
+  loopright: 3410
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -42,15 +42,15 @@ shots:
   mb_drop6: 694
   mb_jackpot: 31
   mb_superjackpot: 55
-  mbnether_drop2: 39
-  mbnether_drop3: 55
-  mbnether_drop4: 14
-  mbnether_drop5: 47
-  mbnether_superjackpot: 2
-  popbumper1: 5474
-  popbumper2: 7971
-  popbumper3: 9389
-  rightslingshot: 3861
+  mbnether_drop2: 66
+  mbnether_drop3: 79
+  mbnether_drop4: 24
+  mbnether_drop5: 76
+  mbnether_superjackpot: 5
+  popbumper1: 5499
+  popbumper2: 8014
+  popbumper3: 9488
+  rightslingshot: 3867
   set1_center: 74
   set1_left: 155
   set1_right: 314
@@ -63,65 +63,66 @@ shots:
   set4_center: 57
   set4_left: 40
   set4_right: 113
-  skill_scoup: 497
-  spinner: 21133
+  skill_scoup: 499
+  spinner: 21180
   strongholdtravel: 35
-  tool1: 2070
-  tool2: 2663
-  tool3: 1627
+  tool1: 2079
+  tool2: 2678
+  tool3: 1635
   village_jackpot: 22
   villager_jackpot: 144
   villager_spinner: 114
   world_jackpot: 399
+  worldspinner: 43
 switches:
-  s_bumperrail: 5443
-  s_captiveball: 844
-  s_centertarget: 4172
-  s_collectitem1: 7181
-  s_collectitem2: 7238
-  s_collectitem3: 4592
-  s_collectitem4: 6854
-  s_collectitem5: 6544
+  s_bumperrail: 5683
+  s_captiveball: 849
+  s_centertarget: 4175
+  s_collectitem1: 7243
+  s_collectitem2: 7298
+  s_collectitem3: 4617
+  s_collectitem4: 6903
+  s_collectitem5: 6601
   s_credit_right: 0
-  s_drop1: 2869
-  s_drop2: 4490
-  s_drop3: 14091
-  s_drop4: 2825
-  s_drop5: 6201
-  s_drop6: 3909
-  s_left_flipper: 38332
-  s_leftinlane: 861
-  s_leftoutlane: 720
-  s_leftsling: 5622
-  s_loopleft: 4663
-  s_loopright: 4155
+  s_drop1: 2890
+  s_drop2: 4527
+  s_drop3: 14224
+  s_drop4: 2846
+  s_drop5: 6242
+  s_drop6: 3943
+  s_left_flipper: 38393
+  s_leftinlane: 863
+  s_leftoutlane: 721
+  s_leftsling: 5626
+  s_loopleft: 4670
+  s_loopright: 4173
   s_maint: 0
-  s_plungerlane: 3622
-  s_popbumper1: 5474
-  s_popbumper2: 7971
-  s_popbumper3: 9389
-  s_portal: 310
-  s_right_flipper: 31996
-  s_rightinlane: 133
+  s_plungerlane: 3641
+  s_popbumper1: 5499
+  s_popbumper2: 8014
+  s_popbumper3: 9488
+  s_portal: 312
+  s_right_flipper: 32024
+  s_rightinlane: 134
   s_rightoutlane: 391
-  s_rightsling: 3861
-  s_scoup: 2109
-  s_spinner: 21136
+  s_rightsling: 3867
+  s_scoup: 2132
+  s_spinner: 21183
   s_start: 63
   s_tilt: 0
-  s_tooltarget1: 3098
-  s_tooltarget2: 3801
-  s_tooltarget3: 2401
-  s_topbumperleft: 1639
-  s_topbumperright: 2444
-  s_topkicker: 6019
-  s_trough1: 3286
-  s_trough2: 2721
-  s_trough3: 2491
-  s_trough4: 2132
-  s_troughjam: 2743
-  s_upperdrop: 2782
-  s_whitedot1: 1167
-  s_whitedot2: 1321
-  s_whitedot3: 1348
-  s_whitedot4: 1335
+  s_tooltarget1: 3109
+  s_tooltarget2: 3816
+  s_tooltarget3: 2409
+  s_topbumperleft: 1660
+  s_topbumperright: 2467
+  s_topkicker: 6071
+  s_trough1: 3311
+  s_trough2: 2738
+  s_trough3: 2502
+  s_trough4: 2143
+  s_troughjam: 2762
+  s_upperdrop: 2792
+  s_whitedot1: 1172
+  s_whitedot2: 1330
+  s_whitedot3: 1351
+  s_whitedot4: 1347
