--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -26,6 +26,11 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
+  mode_night_stopped:
+    world1mode_music:
+      action: play
+      loops: -1
+      mode_end_action: stop
   world1_collected: travel_ready
 
 variable_player:
