--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -26,6 +26,11 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
+  mode_night_stopped:
+    world3mode_music:
+      action: play
+      loops: -1
+      mode_end_action: stop
   world3_collected: travel_ready
 
 variable_player:
