--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -13,7 +13,7 @@ shot_profiles:
 
 counters:
   counter_villagermultiball:
-    count_events: spinner_hit
+    count_events: worldspinner_hit
     starting_count: 0
     count_interval: 1
     count_complete_value: 20
@@ -26,7 +26,7 @@ counters:
     count_events: popbumper1_hit, popbumper2_hit, popbumper3_hit
     starting_count: 0
     count_interval: 1
-    count_complete_value: 20
+    count_complete_value: 10
     persist_state: true
     restart_events: multiball_nightmb_ended
     disable_events: nightmb_disable
@@ -40,6 +40,13 @@ multiball_locks:
     enable_events: villagermultiball_ready
     disable_events: villagermultiball_start, villagermb_disable
 
+  nightlock:
+    balls_to_lock: 1
+    locked_ball_counting_strategy: physical_only
+    lock_devices: bd_scoop 
+    enable_events: nightmultiball_ready
+    disable_events: nightmultiball_start, nightmb_disable
+
 
 multiballs:
   villagermb:
@@ -49,15 +56,18 @@ multiballs:
     start_events: villagermultiball_start
     shoot_again: 0s
 
-  # nightmb:
-  #   ball_count: 2
-  #   ball_locks: bd_scoup
-  #   enable_events: nightmultiball_ready
-  #   start_events: nightmultiball_start
-  #   shoot_again: 0s
+  nightmb:
+    ball_count: 2
+    ball_locks: bd_scoop
+    enable_events: nightmultiball_ready
+    start_events: nightmultiball_start
+    shoot_again: 0s
 
 
 shots:
+  worldspinner:
+    switch: s_spinner
+
   collectitem1:
     switch: s_collectitem1
     profile: collectshot
@@ -101,22 +111,22 @@ sound_player:
     night_mode_ready
 
 light_player:
-  spinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
     l_spinner1: green
     l_spinner2: off
     l_spinner3: off
     l_spinner4: off
-  spinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 1000
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 1000
     l_spinner1: off
     l_spinner2: green
     l_spinner3: off
     l_spinner4: off
-  spinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 1000
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 1000
     l_spinner1: off
     l_spinner2: off
     l_spinner3: green
     l_spinner4: off
-  spinner_hit{device.counters.counter_villagermultiball.value>=16}:
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=16}:
     l_spinner3: off 
     l_spinner2: off 
     l_spinner1: off
@@ -140,33 +150,42 @@ light_player:
       color: purple
       fade: 5000ms
 
-# show_player:
-#   nightmultiball_ready:
-#     show_nightmultiball_ready:
-#       loops: 0
-#       speed: 1
- 
+  multiball_nightmb_ended:
+    lgi:
+      color: white
+      fade: 5000ms
+    lactionbar: off
+
+
 
 variable_player:
 
+  #RESET VARIABLES
+  mode_worldcontroller_started:
+    multiball_mb:
+      int: 1
+      action: set 
+
   #SPINNER SCORING
-  spinner_hit{device.counters.counter_villagermultiball.value<4}: #LEVEL 100
+  worldspinner_hit{device.counters.counter_villagermultiball.value<4}: #LEVEL 100
     score: 100 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  spinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
     score: 1000 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  spinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 2000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 2000
     score: 2000 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  spinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 3000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 3000
     score: 3000 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  spinner_hit{device.counters.counter_villagermultiball.value>=16}: #LEVEL 4000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=16}: #LEVEL 4000
     score: 4000 * current_player.multiplier_mb
     world_jackpot_base: 1000
 
 
+
+  #MULTIBALL VARIABLES
 
   multiball_villagermb_started: #VILLAGER MULTIBALL STARTED
     multiplier_mb:
@@ -179,6 +198,19 @@ variable_player:
   multiball_villagermb_ended: #VILLAGER MULTIBALL ENDED
     multiplier_mb:
       int: 1
+      action: set
+
+  multiball_nightmb_started:
+    multiplier_mb:
+      int: 2
+      action: set
+
+  multiball_nightmb_ended:
+    multiplier_mb:
+      int: 1
+      action: set
+    nightmb_ready:
+      int: 0
       action: set
 
   villagermb_disable:
@@ -194,6 +226,11 @@ variable_player:
   nightmultiball_ready:
     nightmb_ready:
       int: 1
+      action: set
+
+  nightmb_disable:
+    nightmb_ready:
+      int: 0
       action: set
 
  #COLLECT ITEM 1 HIT
@@ -381,6 +418,10 @@ event_player:
     show_tools
     show_extraball
     show_debug
+    show_spinner_progress
+
+  worldspinner_hit:
+    show_spinner_progress
 
   mode_worldcontroller_started{current_player.villagermb_ready==1}:
     villagermultiball_ready
@@ -437,6 +478,9 @@ event_player:
   sw_playfield_active_active{device.multiball_locks.villagerlock.locked_balls==1 and device.multiball_locks.villagerlock.enabled}:
     villagermultiball_start
 
+  #START NIGHT MULTIBALL ON PLUNGE
+  sw_playfield_active_active{device.multiball_locks.nightlock.locked_balls==1 and device.multiball_locks.nightlock.enabled}:
+   nightmultiball_start
 
 
  
